# wasmplayer

./: Cargo.toml  README.md  fly.toml  index.html
.github/: dependabot.yaml
.github/workflows/: ci-cd.yml  sliminio.yml
assets/: style.css
pkg/: wasmplayer.js  wasmplayer_bg.wasm
src/: lib.rs
