[package]
name = "wasmplayer"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Rossoni <andrea dot ros.21 at murena dot io>"]
readme = "README.md"
repository = "https://github.com/andros21/wasmplayer"
homepage = "https://github.com/andros21/wasmplayer"
description = "a simple wasm media player"
keywords = [
   "gh-pages",
   "media-player",
   "music-player",
   "wasm",
   "wasm-bindgen",
   "wasm-pack",
   "web",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
gloo-events = "0.2.0"
gloo-timers = "0.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[dependencies.web-sys]
version = "0.3.70"
features = [
   'Node',
   'Window',
   'Document',
   'HtmlElement',
   'HtmlCollection',
   'HtmlAudioElement',
   'HtmlInputElement',
   'CssStyleDeclaration',
]
